--- a/React-Projects/crypto-with-backend/FrontEnd/package.json
+++ b/React-Projects/crypto-with-backend/FrontEnd/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-google-charts": "^5.2.1",
     "react-loader-spinner": "^8.0.0",
     "react-router-dom": "^7.12.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
